# rplay

./: .indent.pro  ChangeLog  INSTALL  Makefile.config.in  Makefile.in  NEWS  PORTING  README  README.linux  README.sgi  README.sun  TODO  configure  configure.in  version
adpcm/: Makefile.in  README.rplay  decode.c  encode.c  g711.c  g721.c  g723_24.c  g723_40.c  g72x.c  g72x.h  g72xdecode.1  g72xencode.1
contrib/: README.crossfire  mailnoise
contrib/cdrplay/: cdrplay.c
contrib/fingergoodies/: .fingerrc  getcalleraddr.c  random.c
contrib/jukebox-1.3/: Makefile  jukebox.c
contrib/jukebox-1.3/man1/: jukebox.1
contrib/mailsound/: Makefile  mailsound.1  mailsound.c
contrib/pos/: Makefile  pos.c
contrib/rplaytool-1.1/: ChangeLog  Makefile  README  list  misc.c  misc.h  rplaytool.G  rplaytool.P  rplaytool.info  rplaytool.make  rplaytool_stubs.c  rplaytool_ui.c  rplaytool_ui.h  rptp.c  rptp.h
contrib/rplaytool-1.1/icons/: arrow.icon  directory.icon  file.icon  none.icon  pause.icon  pause1.icon  pause2.icon  pause3.icon  pause4.icon  play.icon  play1.icon  play2.icon  play3.icon  play4.icon  rplaytool.icon  sound.icon  watch.icon
contrib/tkrplay/: README  foo  tkrplay
contrib/vu/: Makefile  vu.1  vu.c
contrib/window_managers/: ctwm  fvwm  tvtwm  twm
contrib/window_managers/olvwm/: .olvwm-sounds  README  olvwm-3.3-patch  olvwm.events
contrib/xjukebox-0.9/: INSTALL  Imakefile  Makefile  README  TODO  XJukebox-color.ad  XJukebox.ad  XJukebox.ad.h  rptpstuff.c  widgets.c  xjukebox.c  xjukebox.h  xjukebox.xpm
contrib/xpilot/: README  arnold_sounds  ren+stimpy_sounds  sounds  sounds-3.1.0  sounds-simpsons  st_sounds  sttng_sounds
devrplay/: Makefile.in  devrplay.c
doc/: Makefile.in  RPLAY.info  RPLAY.texi  RPTP.info  RPTP.texi  genman  librplay.info  librplay.texi  playsound.1  rplay.1  rplay.1.in  rplay.conf.5  rplay.helpers.5  rplay.hosts.5  rplay.info  rplay.servers.5  rplay.texi  rplayd.8  rplayd.8.in  rptp.1  rptp.1.in
etc/: rplay.conf  rplay.helpers  rplay.hosts  rplay.servers
examples/: async1.c  async2.c  flow1.c  level.c
gsm/: Makefile.in  README.rplay  add.c  code.c  debug.c  decode.c  gsm.h  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_explode.c  gsm_implode.c  gsm_option.3  gsm_option.c  gsm_print.c  long_term.c  lpc.c  preprocess.c  private.h  proto.h  rpe.c  short_term.c  table.c  toast.1  toast.c  toast.h  toast_alaw.c  toast_audio.c  toast_lin.c  toast_ulaw.c  unproto.h
include/: Makefile.in  config.h.in  rplay.h  version.h
java/org/doit/io/: ByteArray.java
java/org/doit/rplay/: RPlay.java
lib/: Makefile.in  hash.c  hash.h  strdup.c  strdup.h  tilde.c  xmalloc.c
librplay/: Makefile.in  async.c  rplay.c  rptp.c
perl/: .Mailsounds  Mailsound  Mailsound.1  RPTP.pm  RPlay.pm  example.pl  rplay.ph
playsound/: Makefile.in  playsound.c
rplay/: Makefile.in  rplay.c
rplayd/: Makefile.in  buffer.c  buffer.h  cache.c  cache.h  cdrom.c  cdrom.h  command.c  command.h  connection.c  connection.h  flange.c  flange.h  helper.c  helper.h  host.c  host.h  misc.c  misc.h  native.c  native.h  rplayd.c  rplayd.h  server.c  server.h  sound.c  sound.h  spool.c  spool.h  timer.c  timer.h  ulaw.c  ulaw.h  xhash.c  xhash.h
rplayd/audio/: README  audio_FreeBSD.c  audio_FreeBSD.h  audio_generic.c  audio_generic.h  audio_hpux.c  audio_hpux.h  audio_oss.c  audio_oss.h  audio_sgi.c  audio_sgi.h  audio_solaris.c  audio_solaris.h  audio_sun.c  audio_sun.h
rptp/: Makefile.in  rptp.c
